# ros2-nav2-tutorial

./: .gitignore  .gitmodules
bt_trees/: test_bt.xml  test_bt2.xml  test_bt3.xml
install/: local_setup.sh  setup.sh
install/my_robot_bringup/share/ament_index/resource_index/package_run_dependencies/: my_robot_bringup
install/my_robot_bringup/share/ament_index/resource_index/parent_prefix_path/: my_robot_bringup
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/cmake/: my_robot_bringupConfig-version.cmake  my_robot_bringupConfig.cmake
install/my_robot_bringup/share/my_robot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_bringup/share/my_robot_bringup/launch/: simple_robot_gazebo.launch.py  simple_robot_gazebo.launch.xml
install/my_robot_bringup/share/my_robot_bringup/rviz/: simple_robot_car.rviz
install/my_robot_bringup/share/my_robot_bringup/worlds/: test.world
install/my_robot_description/share/ament_index/resource_index/package_run_dependencies/: my_robot_description
install/my_robot_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_description
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_description/share/my_robot_description/launch/: display.launch.py  display.launch.xml
install/my_robot_description/share/my_robot_description/rviz/: simple_robot_car.rviz
install/my_robot_description/share/my_robot_description/urdf/: camera.xacro  common_properties.xacro  my_robot.urdf.xacro  simple_robot_car.urdf  simple_robot_car.urdf.xacro  simple_robot_car_gazebo.urdf.xacro
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/action/: count_until.h  count_until.hpp  move_robot.h  move_robot.hpp
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/srv/: get_transform.h  get_transform.hpp
install/my_robot_interfaces/share/ament_index/resource_index/package_run_dependencies/: my_robot_interfaces
install/my_robot_interfaces/share/ament_index/resource_index/parent_prefix_path/: my_robot_interfaces
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/action/: CountUntil.action  CountUntil.idl  MoveRobot.action  MoveRobot.idl
install/my_robot_interfaces/share/my_robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_robot_interfaces__rosidl_generator_pyExport.cmake  export_my_robot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  my_robot_interfacesConfig-version.cmake  my_robot_interfacesConfig.cmake  my_robot_interfaces__rosidl_typesupport_cppExport.cmake  my_robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_robot_interfaces/share/my_robot_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/my_robot_interfaces/share/my_robot_interfaces/srv/: GetTransform.idl  GetTransform.srv  GetTransform_Request.msg  GetTransform_Response.msg
log/: latest_build  latest_list
src/common/nknav2_bt_navigator/: CMakeLists.txt  nknav2_bt_navigator_plugins.xml  package.xml
src/common/nknav2_bt_navigator/include/nknav2_bt_navigator/: bt_navigator_server.hpp  navigator.hpp
src/common/nknav2_bt_navigator/include/nknav2_bt_navigator/plugins/navigators/: navigate_through_poses.hpp  navigate_to_pose.hpp
src/common/nknav2_bt_navigator/plugins/navigators/: navigate_through_poses.cpp  navigate_to_pose.cpp
src/common/nknav2_bt_navigator/src/: bt_navigator_server.cpp  main.cpp
src/fields2cover_tutorial/: CMakeLists.txt  package.xml
src/fields2cover_tutorial/include/fields2cover_tutorial/: tutorial.h
src/fields2cover_tutorial/src/: main.cpp  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp  tutorial8.cpp
src/my_robot_behavior_tree/: CMakeLists.txt  my_robot_behavior_tree_plugin.xml  nav2_tree_nodes.xml  package.xml
src/my_robot_behavior_tree/include/my_robot_behavior_tree/plugins/action/: test_action.hpp
src/my_robot_behavior_tree/plugins/action/: test_action.cpp
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/: nav2_params.yaml
src/my_robot_bringup/launch/: navigate_demo.launch.py  simple_robot_gazebo.launch.py  simple_robot_gazebo.launch.xml
src/my_robot_bringup/worlds/: test.world
src/my_robot_description/urdf/: simple_robot_car.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/action/: FullCoverage.action
src/my_robot_navigator/: CMakeLists.txt  my_robot_navigator_plugins.xml  package.xml
src/my_robot_navigator/behavior_trees/: navigate_full_coverage.xml
src/my_robot_navigator/include/my_robot_navigator/: navigate_full_coverage.hpp
src/my_robot_navigator/src/: navigate_full_coverage.cpp
src/my_robot_planner/: CMakeLists.txt  package.xml
(+47 files in other folders)
