<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_navigator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyenkhanh97.nk97@gmail.com">albert</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  
  <depend>pluginlib</depend>
  <depend>my_robot_interfaces</depend>
  <depend>nknav2_bt_navigator</depend>
  <depend>nav2_bt_navigator</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
